-------------------
 - Minimum PHP version is now 7.0.
 - Migrate (parts of) the API and webpages to Symfony.
 - Update API to conform to ICPC Contest API specification.
 - Add eventdaemon to create some entries for event-feed API endpoint.
 - Allow installing DB default data and examples separately.
 - Add "entry point" field for submissions to override auto detected
   main class or file.
 - Reduce memory reserved for JVM overhead and make stack size
   configurable in Java compile script.
 - Fix runguard bug when stdout/stderr are not redirected to file.
 - Add support for Kotlin by mounting /bin in chroot environment.
 - Add options to have second scoreboard resolution and to suppress
   problem information from the scoreboard. Thanks Marc Furon.
 - Allow configuration variables to be publicly viewable or not.
 - Add helper script dj_run_chroot to perform chroot operations.
 - Use d3 charts instead of float for statistics.
 - Update ACE editor to version 1.3.3.
 - [security] Fix team permission for viewing clarification categories.
 - [security] Ensure only users with admin role can update executables.
   Thanks Niklas Hoehne for reporting!
 - Many small issues fixed and documentation improvements.

Version 5.2.0 - DEV
-------------------
 - [security] bind PHP session cookie to specific web URI to prevent
   sharing sessions between different websites on the same host.
 - [security] Add RUNGROUP configure setting to make sure that submissions
   do not have access to group root files. (#250 thanks Richard Lobb)
 - Allow team to download testcase data marked as 'sample'.
 - Add icons to menu bars.
 - Allow to filter submissions on team, problem, language.
 - Show when a problem can not be judged on any judgehost.
 - Add "internal error" messages to deal more graceously with judgehost
   problems e.g. due to faulty compile or compare scripts.
 - Detect low disk space on judgehosts and decrease space usage.